# io-uring-ai-control

./: .gitignore  LICENSE  README.md  SECURITY.md  pyproject.toml  save-cloudflare-token.ps1  save-telegram-bot-token.ps1
.github/workflows/: ci.yml
deploy/: config.shadow.toml
deploy/cloudflare/: configure-secrets.ps1  configure-telegram-webhook-locally.ps1  deploy-relay.ps1  diagnose-telegram-webhook.ps1  export-telegram-host-handoff.ps1  isolate-telegram-answer.ps1  pair-telegram-locally.ps1  test-telegram-button.ps1
deploy/monitoring/: README.md  iou-alert  iou-crashwatch  iou-crashwatch.service  iou-crashwatch.timer  iou-status
deploy/remote/: activate-readonly.sh  activate-relay.sh  auto_cycle.sh  (+10 more)
docs/: FUZZER.md  METRICS.md  RESEARCH.md
examples/: config.mock.toml  harness-contract.mock.json  lkml-state.sample.json  proposal.mock.json  reviewer.mock.json  telemetry.sample.json
harness/: README.md  io_uring_harness_native.c
tests/: test_artifacts.py  test_budget.py  test_canary.py  test_canary_cli.py  test_canary_service.py  test_compiler.py  test_config.py  test_contract.py  test_corpus_profile.py  test_decisions.py  test_event_cli.py  test_events.py  test_execution_approval.py  test_feedback.py  test_harness_codec.py  test_lkml.py  test_notifier.py  test_notify_relay.py  test_pipeline.py  test_promoter.py  test_prompts.py  test_providers.py  test_quarantine.py  test_relay_activation.py  test_repro.py  test_systemd_isolation.py  test_telemetry.py  test_triggers.py  test_validation_authority.py  test_validation_record_bounds.py  test_validator.py
(+64 files in other folders)
